--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -2,9 +2,10 @@
 
 ---
 
-<section class="mx-auto max-w-7xl px-4 grid grid-cols-2 relative">
-  <img class="w-96" src="./Photo.png" />
-  <div class="flex flex-col p-4 w-[60ch] justify-self-end gap-4">
+<section class="mx-auto max-w-7xl grid grid-cols-2 relative">
+  <img class="object-cover h-full" src="./PhotoTranp.png" />
+  <div class="absolute bg-primary w-1/2 h-full -z-10"></div>
+  <div class="flex flex-col p-12 gap-4 justify-center">
     <div
       class="border-2 border-primary w-fit p-1 px-6 rounded-full text-primary"
     >
