--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,10 @@ import Header from "../components/header.astro";
 import Hero from "../components/hero.astro";
 import Gutter from "../components/gutter.astro";
 import About from "../components/about.astro";
+import Experience from "../components/experience.astro";
+import Expertise from "../components/expertise.astro";
+import Contact from "../components/contact.astro";
+import Footer from "../components/footer.astro";
 
 interface Props {
   title: string;
@@ -21,6 +25,10 @@ const { title } = Astro.props;
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
@@ -34,6 +42,12 @@ const { title } = Astro.props;
       <Gutter />
       <About />
       <Gutter />
+      <Experience />
+      <Gutter />
+      <Expertise />
+      <Contact />
+      <Gutter />
+      <Footer />
     </main>
   </body>
 </html>
@@ -45,6 +59,8 @@ const { title } = Astro.props;
     --text-muted: 160, 160, 160;
 
     /* Streak borders and gutters */
+    --border-color: #eee;
+    --card-background: #fafafa;
     --opacity-fade-0: 1;
     --opacity-fade-1: 0.3;
     --streak-color: 180, 180, 180;
