--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -1,13 +1,20 @@
 ---
-
+import { Image } from "astro:assets";
+import Photo from "../assets/PortraitEditMonotone.png";
 ---
 
 <section class="mx-auto max-w-7xl grid grid-cols-2 relative">
-  <img class="object-cover h-full" src="./PhotoTranp.png" />
-  <div class="absolute bg-primary w-1/2 h-full -z-10"></div>
+  <Image
+    id="photo"
+    class="object-cover h-full brightness-90 text-gra"
+    src={Photo}
+    alt="A description of my image."
+  />
+  <!-- <img class="transform-[rotate]" src="Illustration.svg" /> -->
+  <div class="absolute bg-[#767676] w-1/2 h-full bottom-0 -z-10"></div>
   <div class="flex flex-col p-12 gap-4 justify-center">
     <div
-      class="border-2 border-primary w-fit p-1 px-6 rounded-full text-primary"
+      class="border-2 border-primary bg-primary/10 w-fit p-1 px-6 rounded-full text-primary"
     >
       About
     </div>
