--- a/src/components/experience.astro
+++ b/src/components/experience.astro
@@ -2,10 +2,10 @@
 import Card from "./card.astro";
 ---
 
-<section class="mx-auto max-w-7xl py-32">
-  <div class="flex flex-col gap-6">
+<section class="mx-auto max-w-7xl h-[90vh] py-32">
+  <div class="flex flex-col justify-between h-full">
     <div
-      class="border-2 border-primary w-fit mx-auto p-1 px-6 rounded-full text-primary"
+      class="border-2 border-primary bg-primary/10 w-fit mx-auto p-1 px-6 rounded-full text-primary"
     >
       Experience
     </div>
@@ -37,7 +37,7 @@ import Card from "./card.astro";
     </div>
     <Card classes="">
       <div class="flex gap-4 items-baseline">
-        <h3 class="font-bold text-2xl text-primary">
+        <h3 class="font-semibold text-xl text-white">
           Senior Frontend Engineer
         </h3>
         <span class="font-normal text-sm text-textMuted"
