--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -2,15 +2,19 @@
 
 ---
 
-<header class="w-full border-b shadow-sm">
+<header
+  class="w-full bg-[#0b1528d1] shadow-sm backdrop-blur-md sticky top-0 z-10 border border-[#21304d]"
+>
   <div class="mx-auto max-w-7xl flex items-center justify-between p-4">
-    <a href="/">
-      <img class="h-8" src="/favicon.svg" />
+    <a href="/" class="flex gap-2 items-center">
+      <!-- <img class="h-8" src="/favicon.svg" /> -->
+      <span class="font-medium text-lg">MANIKANDAN</span>
+      <span class="font-thin text-gray-500 text-lg">SIVASANKAR</span>
     </a>
-    <nav class="hidden sm:flex gap-8 font-light">
-      <a href="#">Home</a>
-      <a href="#">Contact</a>
-      <a href="#">Works</a>
+    <nav class="hidden sm:flex gap-8 font-light items-center text-gray-400">
+      <a href="#" class="text-sm hover:text-white transition-colors">HOME</a>
+      <a href="#" class="text-sm hover:text-white transition-colors">CONTACT</a>
+      <a href="#" class="text-sm hover:text-white transition-colors">WORKS</a>
     </nav>
   </div>
 </header>
