--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -5,7 +5,7 @@ import Card from "./card.astro";
 <section class="mx-auto max-w-7xl px-4 flex flex-col gap-16 py-16 pb-32">
   <Card classes="w-4/5">
     <div class="flex justify-between items-center gap-16">
-      <h3 class="text-xl font-medium">Hiring?</h3>
+      <h3 class="text-2xl font-medium text-white">Hiring ?</h3>
       <ul>
         I'm interested in full time opportunities with:
         <li>A</li>
@@ -15,7 +15,7 @@ import Card from "./card.astro";
       </ul>
       <a
         href="#"
-        class="mt-8 bg-primary hover:[--alpha:0.9] text-white px-4 py-2 rounded-md self-center lg:self-start transition-colors"
+        class="mt-8 shadow-xl shadow-primary/30 bg-primary hover:bg-primary/90 hover:[--alpha:0.9] text-white px-4 py-2 rounded-md self-center lg:self-start transition-colors"
         >Let's Talk</a
       >
     </div>
