--- a/src/components/expertise.astro
+++ b/src/components/expertise.astro
@@ -5,7 +5,7 @@ import DevIcon from "./devicon.astro";
 
 <section class="mx-auto max-w-7xl px-4 flex flex-col gap-12 pt-32">
   <div
-    class="self-center border-2 border-primary w-fit p-1 px-6 rounded-full text-primary"
+    class="self-center bg-primary/10 border-2 border-primary w-fit p-1 px-6 rounded-full text-primary"
   >
     Expertise
   </div>
