--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,12 +32,17 @@ const { title } = Astro.props;
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;1,9..40,100;1,9..40,200;1,9..40,300;1,9..40,400&display=swap"
+      rel="stylesheet"
+    />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="h-full">
+  <body class="min-h-full">
     <Header />
     <main>
+      <div class="fixed-gradient"></div>
       <Hero />
       <Gutter />
       <About />
@@ -55,16 +60,41 @@ const { title } = Astro.props;
 <style is:global>
   :root {
     --alpha: 1;
-    --primary: 45, 106, 224;
-    --text-muted: 160, 160, 160;
+    --primary: 45 106 224;
+    --text-muted: 160 160 160;
 
     /* Streak borders and gutters */
-    --border-color: #eee;
-    --card-background: #fafafa;
+    --border-color: #272727;
+    --card-background: #060e22;
     --opacity-fade-0: 1;
     --opacity-fade-1: 0.3;
     --streak-color: 180, 180, 180;
     --color-fade-0: rgba(var(--streak-color), var(--opacity-fade-0));
     --color-fade-1: rgba(var(--streak-color), var(--opacity-fade-1));
+  }
+
+  html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 5rem;
+  }
+
+  body {
+    background-color: #050d1c;
+    color: #ffffff;
+  }
+
+  .fixed-gradient {
+    background: radial-gradient(
+      50% 50% at 50% 50%,
+      #2d6ae0 0,
+      rgba(0, 220, 130, 0) 100%
+    );
+    filter: blur(180px);
+    height: 30vh;
+    opacity: 0.6;
+    position: fixed;
+    top: 25vh;
+    width: 100%;
+    z-index: -1;
   }
 </style>
