--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -3,18 +3,29 @@
 ---
 
 <header
-  class="w-full bg-[#0b1528d1] shadow-sm backdrop-blur-md sticky top-0 z-10 border border-[#21304d]"
+  class="w-full bg-[#0b1528d1] shadow-sm backdrop-blur-md sticky top-0 z-10 border-b border-[#1b2741]"
 >
-  <div class="mx-auto max-w-7xl flex items-center justify-between p-4">
+  <div class="mx-auto max-w-7xl flex items-center justify-between p-4 px-6">
     <a href="/" class="flex gap-2 items-center">
-      <!-- <img class="h-8" src="/favicon.svg" /> -->
-      <span class="font-medium text-lg">MANIKANDAN</span>
-      <span class="font-thin text-gray-500 text-lg">SIVASANKAR</span>
+      <img class="h-8" src="/favicon.svg" />
+      <!-- <span class="font-medium text-blue-200 text-lg">MANIKANDAN</span>
+      <span class="font-thin text-primary text-lg">SIVASANKAR</span> -->
     </a>
-    <nav class="hidden sm:flex gap-8 font-light items-center text-gray-400">
-      <a href="#" class="text-sm hover:text-white transition-colors">HOME</a>
-      <a href="#" class="text-sm hover:text-white transition-colors">CONTACT</a>
-      <a href="#" class="text-sm hover:text-white transition-colors">WORKS</a>
+    <nav class="hidden sm:flex gap-8 font-light items-center text-blue-200">
+      <a
+        href="#"
+        class="text-sm font-medium hover:text-primary transition-colors">HOME</a
+      >
+      <a
+        href="#"
+        class="text-sm font-medium hover:text-primary transition-colors"
+        >CONTACT</a
+      >
+      <a
+        href="#"
+        class="text-sm font-medium hover:text-primary transition-colors"
+        >WORKS</a
+      >
     </nav>
   </div>
 </header>
