--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,9 +44,9 @@ const { title } = Astro.props;
     <main>
       <div class="fixed-gradient"></div>
       <Hero />
-      <Gutter />
+      <!-- <Gutter /> -->
       <About />
-      <Gutter />
+      <!-- <Gutter /> -->
       <Experience />
       <Gutter />
       <Expertise />
