--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -3,22 +3,34 @@ import { Image } from "astro:assets";
 import Photo from "../assets/PortraitEditMonotone.png";
 ---
 
-<section class="mx-auto max-w-7xl grid grid-cols-2 relative">
-  <Image
-    id="photo"
-    class="object-cover h-full brightness-90 text-gra"
-    src={Photo}
-    alt="A description of my image."
-  />
-  <!-- <img class="transform-[rotate]" src="Illustration.svg" /> -->
-  <div class="absolute bg-[#767676] w-1/2 h-full bottom-0 -z-10"></div>
+<section class="mx-auto max-w-7xl grid grid-cols-1 sm:grid-cols-2 relative">
+  <div
+    class="relative p-3 self-center justify-self-center w-fit bg-[#141f35] rounded-xl border border-[#29385d]"
+  >
+    <div
+      class="absolute top-[-2px] rounded-xl z-[-2] left-[-2px] h-[calc(100%+4px)] w-[calc(100%+4px)] bg-gradient-to-r from-transparent via-blue-300/80 via-50%"
+    >
+    </div>
+    <Image
+      id="photo"
+      class="object-cover h-64 w-64 md:h-96 md:w-96 rounded-xl opacity-70"
+      src={Photo}
+      alt="A description of my image."
+    />
+  </div>
   <div class="flex flex-col p-12 gap-4 justify-center">
     <div
       class="border-2 border-primary bg-primary/10 w-fit p-1 px-6 rounded-full text-primary"
     >
       About
     </div>
-    <p class="font-semibold">Hi, I'm Manikandan.</p>
+    <p class="text-textMuted">
+      Frontend Engineer for over 6 years focussed on building better user
+      experience on the web. Based in India.
+    </p>
+    <p class="text-textMuted">
+      I love working in an impactful product which would make lives easier.
+    </p>
     <p class="text-textMuted">
       Frontend Engineer for over 6 years focussed on building better user
       experience on the web. Based in India.
