--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -3,10 +3,10 @@
 ---
 
 <section
-  class="mx-auto h-[80vh] max-w-5xl px-4 grid grid-cols-2 relative items-center"
+  class="mx-auto h-[90vh] max-w-7xl px-8 grid grid-cols-2 relative items-center"
 >
   <div
-    class="flex flex-col gap-3 justify-center items-center lg:items-start col-span-2 lg:col-span-1 text-center lg:text-start"
+    class="flex flex-col gap-3 justify-start items-center lg:items-start col-span-2 lg:col-span-1 text-center lg:text-start"
   >
     <h1 class="font-bold text-7xl text-primary">Manikandan Sivasankar</h1>
     <h2 class="font-medium text-gray-300 text-3xl">
@@ -55,162 +55,159 @@
       >
     </div>
   </div>
-  <!-- <img
-    class="w-[36rem] hidden lg:block absolute z-[-1] lg:right-0"
-    src="./Illustration.svg"
-  /> -->
-  <svg
-    width="405"
-    height="228"
-    viewBox="0 0 405 228"
-    fill="none"
-    xmlns="http://www.w3.org/2000/svg"
-    class="mx-auto hidden h-64 lg:block"
-    data-v-feec9d23=""
-    ><rect
-      x="1.23706"
-      y="0.668091"
-      width="403"
-      height="226"
-      rx="12"
-      fill="url(#paint0_linear_549_2000)"
-      fill-opacity="0.2"
-      stroke="url(#paint1_linear_549_2000)"
-      stroke-opacity="0.4"></rect><rect
-      opacity="0.08"
-      x="7.5"
-      y="10.931"
-      width="17"
-      height="17"
-      rx="5"
-      fill="#F1F5F9"
-      stroke="#F1F5F9"
-      stroke-width="1.73707"></rect><rect
-      opacity="0.08"
-      x="69"
-      y="101"
-      width="43"
-      height="43"
-      rx="5"
-      fill="#F1F5F9"
-      stroke="#F1F5F9"></rect><rect
-      opacity="0.08"
-      x="125"
-      y="101"
-      width="43"
-      height="43"
-      rx="5"
-      fill="#F1F5F9"
-      stroke="#F1F5F9"></rect><rect
-      opacity="0.08"
-      x="181"
-      y="101"
-      width="43"
-      height="43"
-      rx="5"
-      fill="#F1F5F9"
-      stroke="#F1F5F9"></rect><rect
-      opacity="0.08"
-      x="237"
-      y="101"
-      width="43"
-      height="43"
-      rx="5"
-      fill="#F1F5F9"
-      stroke="#F1F5F9"></rect><rect
-      opacity="0.08"
-      x="293"
-      y="101"
-      width="43"
-      height="43"
-      rx="5"
-      fill="#F1F5F9"
-      stroke="#F1F5F9"></rect><rect
-      opacity="0.08"
-      x="7.5"
-      y="38.8835"
-      width="17"
-      height="17"
-      rx="3"
-      stroke="#F1F5F9"></rect><rect
-      opacity="0.08"
-      x="7.5"
-      y="61.4656"
-      width="17"
-      height="17"
-      rx="3"
-      stroke="#F1F5F9"></rect><rect
-      opacity="0.08"
-      x="7.5"
-      y="84.0474"
-      width="17"
-      height="17"
-      rx="3"
-      stroke="#F1F5F9"></rect><rect
-      opacity="0.08"
-      x="7.5"
-      y="106.629"
-      width="17"
-      height="17"
-      rx="3"
-      stroke="#F1F5F9"></rect><rect
-      opacity="0.08"
-      x="7.5"
-      y="129.211"
-      width="17"
-      height="17"
-      rx="3"
-      stroke="#F1F5F9"></rect><rect
-      opacity="0.08"
-      x="7.5"
-      y="151.793"
-      width="17"
-      height="17"
-      rx="3"
-      stroke="#F1F5F9"></rect><rect
-      opacity="0.08"
-      x="7.5"
-      y="174.375"
-      width="17"
-      height="17"
-      rx="3"
-      stroke="#F1F5F9"></rect><rect
-      opacity="0.08"
-      x="7.5"
-      y="196.957"
-      width="17"
-      height="17"
-      rx="3"
-      stroke="#F1F5F9"></rect><line
-      opacity="0.08"
-      x1="7.5"
-      y1="32.431"
-      x2="24.5"
-      y2="32.431"
-      stroke="#F1F5F9"></line><defs
-      ><linearGradient
-        id="paint0_linear_549_2000"
-        x1="202.737"
-        y1="0.668091"
-        x2="202.737"
-        y2="103.49"
-        gradientUnits="userSpaceOnUse"
-        ><stop stop-color="white"></stop><stop
-          offset="1"
-          stop-color="white"
-          stop-opacity="0"></stop></linearGradient
-      ><linearGradient
-        id="paint1_linear_549_2000"
-        x1="202.737"
-        y1="0.668091"
-        x2="202.764"
-        y2="154.266"
-        gradientUnits="userSpaceOnUse"
-        ><stop stop-color="white"></stop><stop
-          offset="1"
-          stop-color="white"
-          stop-opacity="0"></stop></linearGradient
-      ></defs
-    ></svg
-  >
+  <div class="justify-self-end hidden h-64 lg:block">
+    <svg
+      width="405"
+      height="228"
+      viewBox="0 0 405 228"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+      data-v-feec9d23=""
+      ><rect
+        x="1.23706"
+        y="0.668091"
+        width="403"
+        height="226"
+        rx="12"
+        fill="url(#paint0_linear_549_2000)"
+        fill-opacity="0.2"
+        stroke="url(#paint1_linear_549_2000)"
+        stroke-opacity="0.4"></rect><rect
+        opacity="0.08"
+        x="7.5"
+        y="10.931"
+        width="17"
+        height="17"
+        rx="5"
+        fill="#F1F5F9"
+        stroke="#F1F5F9"
+        stroke-width="1.73707"></rect><rect
+        opacity="0.08"
+        x="69"
+        y="101"
+        width="43"
+        height="43"
+        rx="5"
+        fill="#F1F5F9"
+        stroke="#F1F5F9"></rect><rect
+        opacity="0.08"
+        x="125"
+        y="101"
+        width="43"
+        height="43"
+        rx="5"
+        fill="#F1F5F9"
+        stroke="#F1F5F9"></rect><rect
+        opacity="0.08"
+        x="181"
+        y="101"
+        width="43"
+        height="43"
+        rx="5"
+        fill="#F1F5F9"
+        stroke="#F1F5F9"></rect><rect
+        opacity="0.08"
+        x="237"
+        y="101"
+        width="43"
+        height="43"
+        rx="5"
+        fill="#F1F5F9"
+        stroke="#F1F5F9"></rect><rect
+        opacity="0.08"
+        x="293"
+        y="101"
+        width="43"
+        height="43"
+        rx="5"
+        fill="#F1F5F9"
+        stroke="#F1F5F9"></rect><rect
+        opacity="0.08"
+        x="7.5"
+        y="38.8835"
+        width="17"
+        height="17"
+        rx="3"
+        stroke="#F1F5F9"></rect><rect
+        opacity="0.08"
+        x="7.5"
+        y="61.4656"
+        width="17"
+        height="17"
+        rx="3"
+        stroke="#F1F5F9"></rect><rect
+        opacity="0.08"
+        x="7.5"
+        y="84.0474"
+        width="17"
+        height="17"
+        rx="3"
+        stroke="#F1F5F9"></rect><rect
+        opacity="0.08"
+        x="7.5"
+        y="106.629"
+        width="17"
+        height="17"
+        rx="3"
+        stroke="#F1F5F9"></rect><rect
+        opacity="0.08"
+        x="7.5"
+        y="129.211"
+        width="17"
+        height="17"
+        rx="3"
+        stroke="#F1F5F9"></rect><rect
+        opacity="0.08"
+        x="7.5"
+        y="151.793"
+        width="17"
+        height="17"
+        rx="3"
+        stroke="#F1F5F9"></rect><rect
+        opacity="0.08"
+        x="7.5"
+        y="174.375"
+        width="17"
+        height="17"
+        rx="3"
+        stroke="#F1F5F9"></rect><rect
+        opacity="0.08"
+        x="7.5"
+        y="196.957"
+        width="17"
+        height="17"
+        rx="3"
+        stroke="#F1F5F9"></rect><line
+        opacity="0.08"
+        x1="7.5"
+        y1="32.431"
+        x2="24.5"
+        y2="32.431"
+        stroke="#F1F5F9"></line><defs
+        ><linearGradient
+          id="paint0_linear_549_2000"
+          x1="202.737"
+          y1="0.668091"
+          x2="202.737"
+          y2="103.49"
+          gradientUnits="userSpaceOnUse"
+          ><stop stop-color="#93C5FD66"></stop><stop
+            offset="1"
+            stop-color="#2D6AE066"
+            stop-opacity="0"></stop></linearGradient
+        ><linearGradient
+          id="paint1_linear_549_2000"
+          x1="202.737"
+          y1="0.668091"
+          x2="202.764"
+          y2="154.266"
+          gradientUnits="userSpaceOnUse"
+          ><stop stop-color="#93C5FD"></stop><stop
+            offset="1"
+            stop-color="#2D6AE0"
+            stop-opacity="0"></stop></linearGradient
+        ></defs
+      ></svg
+    >
+  </div>
 </section>
