--- a/src/components/devicon.astro
+++ b/src/components/devicon.astro
@@ -3,5 +3,5 @@ const { iconName } = Astro.props;
 ---
 
 <i
-  class={`text-8xl cursor-pointer saturate-0 hover:saturate-100 transition-[filter] ${iconName}`}
+  class={`text-8xl cursor-pointer opacity-20 hover:opacity-100 duration-75 transition-opacity ${iconName}`}
 ></i>
