--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -3,6 +3,7 @@
 ---
 
 <section
+  id="hero"
   class="mx-auto h-[90vh] max-w-7xl px-8 grid grid-cols-2 relative items-center"
 >
   <div
@@ -18,7 +19,7 @@
 
     <div class="mt-8 flex gap-4">
       <a
-        href="#photo"
+        href="#about"
         class="bg-primary flex items-center gap-2 hover:bg-primary/90 text-[#d7e5ff] px-4 py-2 rounded-md self-center lg:self-start transition-colors"
         ><svg
           xmlns="http://www.w3.org/2000/svg"
