--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -6,25 +6,36 @@
   class="w-full bg-[#0b1528d1] shadow-sm backdrop-blur-md sticky top-0 z-10 border-b border-[#1b2741]"
 >
   <div class="mx-auto max-w-7xl flex items-center justify-between p-4 px-6">
-    <a href="/" class="flex gap-2 items-center">
+    <a href="/" class="gap-2 items-center hidden sm:flex">
       <img class="h-8" src="/favicon.svg" />
       <!-- <span class="font-medium text-blue-200 text-lg">MANIKANDAN</span>
       <span class="font-thin text-primary text-lg">SIVASANKAR</span> -->
     </a>
-    <nav class="hidden sm:flex gap-8 font-light items-center text-blue-200">
+    <nav
+      class="flex gap-8 font-light items-center flex-1 justify-evenly sm:flex-none sm:justify-normal"
+    >
       <a
-        href="#"
+        href="#hero"
         class="text-sm font-medium hover:text-primary transition-colors">HOME</a
       >
       <a
-        href="#"
+        href="#about"
         class="text-sm font-medium hover:text-primary transition-colors"
-        >CONTACT</a
+        >ABOUT</a
+      >
+      <a href="/" class="block sm:hidden gap-2 items-center">
+        <img class="h-8" src="/favicon.svg" />
+        <!-- <span class="font-medium text-blue-200 text-lg">MANIKANDAN</span>
+        <span class="font-thin text-primary text-lg">SIVASANKAR</span> -->
+      </a>
+      <a
+        href="#experience"
+        class="text-sm font-medium hover:text-primary transition-colors">WORK</a
       >
       <a
-        href="#"
+        href="#tools"
         class="text-sm font-medium hover:text-primary transition-colors"
-        >WORKS</a
+        >SKILLS</a
       >
     </nav>
   </div>
