--- a/src/components/expertise.astro
+++ b/src/components/expertise.astro
@@ -3,7 +3,7 @@ import DevIcon from "./devicon.astro";
 import Card from "./card.astro";
 ---
 
-<section id="tools" class="py-16 md:py-20 px-6">
+<section id="skills" class="py-16 md:py-20 px-6">
   <h2 class="text-5xl font-light text-gray-300 text-center flex flex-col gap-2">
     <span class="text-primary font-bold">Technologies</span>
     <span> I work with</span>
@@ -26,7 +26,7 @@ import Card from "./card.astro";
       <DevIcon iconName="devicon-postgresql-plain colored" />
     </ul>
   </div>
-  <div class="pt-16 w-fit min-w-[30rem] mx-auto">
+  <div class="pt-16 w-fit min-w-[24rem] mx-auto">
     <Card>
       <div
         class="flex justify-around items-center gap-4 md:gap-16 flex-col md:flex-row md:items-center"
