--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -15,7 +15,7 @@
       class="flex gap-8 font-light items-center flex-1 justify-evenly sm:flex-none sm:justify-normal"
     >
       <a
-        href="#hero"
+        href="#home"
         class="text-sm font-medium hover:text-primary transition-colors">HOME</a
       >
       <a
@@ -29,11 +29,11 @@
         <span class="font-thin text-primary text-lg">SIVASANKAR</span> -->
       </a>
       <a
-        href="#experience"
+        href="#work"
         class="text-sm font-medium hover:text-primary transition-colors">WORK</a
       >
       <a
-        href="#tools"
+        href="#skills"
         class="text-sm font-medium hover:text-primary transition-colors"
         >SKILLS</a
       >
