--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import Photo from "../assets/PortraitEditMonotone.png";
+import Photo from "../assets/Photo.png";
 ---
 
 <section id="about" class="py-16 md:py-20 px-6">
@@ -8,11 +8,11 @@ import Photo from "../assets/PortraitEditMonotone.png";
     class="text-5xl font-light text-gray-300 text-center flex flex-col gap-2 pb-12"
   >
     <span class="text-primary font-bold"
-      >About <span class="text-gray-400 font-light">Me</span></span
+      >About <span class="text-white font-light">Me</span></span
     >
   </h2>
   <div
-    class="max-w-7xl grid grid-cols-1 md:grid-cols-2 relative gap-y-12 md:gap-y-0 md:gap-x-12"
+    class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 relative gap-y-12 md:gap-y-0 md:gap-x-12"
   >
     <div
       class="relative p-3 self-center justify-self-center w-fit bg-[#141f35] rounded-xl border border-[#29385d]"
@@ -22,9 +22,9 @@ import Photo from "../assets/PortraitEditMonotone.png";
       >
       </div>
       <Image
-        class="object-cover w-60 sm:w-80 md:w-96 rounded-xl opacity-70"
+        class="object-cover w-60 sm:w-80 md:w-96 rounded-xl opacity-90"
         src={Photo}
-        alt="A description of my image."
+        alt="Photo of Manikandan"
       />
     </div>
     <div class="flex flex-col gap-4 justify-center">
