--- a/src/components/experience.astro
+++ b/src/components/experience.astro
@@ -2,7 +2,7 @@
 import Card from "./card.astro";
 ---
 
-<section id="experience" class="py-16 md:py-20 px-6">
+<section id="work" class="py-16 md:py-20 px-6">
   <h2 class="text-5xl font-light text-gray-300 text-center flex flex-col gap-2">
     <span class="text-primary font-bold">Work</span>
     <span>Experiences</span>
