--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<footer class="flex justify-between max-w-7xl mx-auto py-4">
-  <p class="font-thin text-sm">Designed and developed by Manikandan</p>
+<footer class="flex justify-between max-w-7xl mx-auto p-4 px-6">
+  <p class="font-thin text-sm">Made with Astro + Tailwind</p>
   <p class="font-thin text-sm">&#169; Manikandan 2023</p>
 </footer>
