--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -3,7 +3,7 @@
 ---
 
 <section
-  id="hero"
+  id="home"
   class="mx-auto h-[90vh] max-w-7xl px-8 grid grid-cols-2 relative items-center"
 >
   <div
